--- a/gradle.properties
+++ b/gradle.properties
@@ -4,14 +4,14 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.20.4
-yarn_mappings=1.20.4+build.3
-loader_version=0.15.6
+minecraft_version=1.20.6
+yarn_mappings=1.20.6+build.2
+loader_version=0.15.11
 
 # Mod Properties
-mod_version=0.0.1
-maven_group=net.redstoneOverpower
-archives_base_name=redstoneoverpower
+mod_version=0.0.1-1.20.6
+maven_group=net.redstoneoverpower
+archives_base_name=redstone-overpower
 
 # Dependencies
-fabric_version=0.95.4+1.20.4
+fabric_version=0.99.0+1.20.6
